--- a/index.html
+++ b/index.html
@@ -156,7 +156,11 @@
 </div>
     </main>
     <footer>
-
+<div class="footer">
+    <h4>Influencer products</h4>
+    <p>Copyright &copy 2020  influencer products</p>
+    <p>All rights reserved</p>
+</div>
     </footer>
 </body>
 </html>
